# house-price-quoting-app

./: .dockerignore  .uvrc  ARCHITECTURE.md  DEBUGGING_LOG.md  DEPLOYMENT_FIX.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_PROJECT_SUMMARY.md  DOCUMENTATION_QUICKSTART.md  DOCUMENTATION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  UV_MIGRATION.md  VALIDATION_IMPLEMENTATION.md  docker-compose.yml  dockerfile-docs  dockerfile-fastapi  dockerfile-streamlit  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml
ames_house_price_prediction/: engine.py  plots.py
ames_house_price_prediction/config/: __init__.py  features.py  models.py  paths.py  settings.py
ames_house_price_prediction/core/: __init__.py  feature_transformer.py  interfaces.py  model.py  preprocessing.py  service.py
ames_house_price_prediction/data/: dataset.py  utils.py
ames_house_price_prediction/features/: features.py
ames_house_price_prediction/modeling/: predict.py  train.py
ames_house_price_prediction/utils/: __init__.py  logging.py
ames_house_price_prediction/validation/: __init__.py  custom_expectations.py  expectations.py  validators.py
api/: main.py
app/: main.py
docs/: DATA_VALIDATION.md  TYPE_ANNOTATIONS.md  changelog.md  contributing.md  index.md
docs/explanation/: architecture.md  dependency-management.md  index.md  validation-strategy.md
docs/how-to/: index.md  run-tests.md
docs/includes/: abbreviations.md
docs/javascripts/: mathjax.js
docs/reference/: api-endpoints.md  index.md
docs/stylesheets/: extra.css
docs/tutorials/: first-model.md  index.md  quickstart.md
tests/: conftest.py
tests/e2e/: test_complete_pipeline.py
tests/integration/: test_api.py  test_prediction_pipeline.py
tests/unit/test_core/: test_feature_transformer.py  test_model.py  test_preprocessing.py  test_service.py
tests/unit/test_validation/: test_expectations.py  test_validators.py
