[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ames_house_price_prediction"
version = "0.0.1"
description = "Predict house prices using  various regression techniques."
authors = [
  { name = "Nikolaos Mavromatis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ames_house_price_prediction"]
force_sort_within_sections = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=ames_house_price_prediction.core",
    "--cov=ames_house_price_prediction.config",
    "--cov=ames_house_price_prediction.validation",
    "--cov=api",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multiple components)",
    "e2e: End-to-end tests (slow, full pipeline)",
    "slow: Tests that take significant time",
    "api: API endpoint tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sklearn.exceptions.InconsistentVersionWarning",
]
