[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ames_house_price_prediction"
version = "0.0.1"
description = "Predict house prices using  various regression techniques."
authors = [
  { name = "Nikolaos Mavromatis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12"

dependencies = [
    # Web frameworks
    "fastapi>=0.122.0",
    "fastapi-cli>=0.0.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "httptools>=0.6.4",
    "uvloop>=0.21.0",
    "websockets>=13.1",
    "python-multipart>=0.0.17",
    "streamlit>=1.51.0",

    # Core ML and data science (constrained by great-expectations)
    "pandas>=2.0.0",
    "numpy>=1.22.4,<2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "lightgbm>=4.0.0",

    # Data validation
    "great-expectations==0.18.19",
    "pydantic>=2.0.0",
    "pydantic_core>=2.0.0",
    "email_validator>=2.0.0",

    # Visualization (constrained by great-expectations)
    "altair>=4.2.1,<5.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pydeck>=0.8.0",

    # Utilities
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "httpcore>=1.0.0",
    "certifi>=2024.0.0",
    "typer>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "tenacity>=8.0.0",
    "joblib>=1.3.0",
    "watchdog>=3.0.0",

    # Data formats and serialization
    "pyarrow>=12.0.0",
    "protobuf>=4.0.0",
    "PyYAML>=6.0",
    "toml>=0.10.0",

    # Supporting libraries
    "annotated-types>=0.5.0",
    "anyio>=4.0.0",
    "attrs>=23.0.0",
    "blinker>=1.6.0",
    "cachetools>=5.0.0",
    "cffi>=1.15.0",
    "charset-normalizer>=3.0.0",
    "colorama>=0.4.6",
    "cryptography>=41.0.0",
    "dnspython>=2.4.0",
    "h11>=0.14.0",
    "idna>=3.4",
    "Jinja2>=3.1.0",
    "MarkupSafe>=2.1.0",
    "packaging>=23.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "threadpoolctl>=3.0.0",
    "tzdata>=2023.0",
    "urllib3>=2.0.0",
    "watchfiles>=0.20.0",

    # JSON schema
    "jsonschema>=4.17.0",
    "jsonschema-specifications>=2023.0.0",
    "referencing>=0.30.0",
    "rpds-py>=0.10.0",

    # Plotting support
    "contourpy>=1.1.0",
    "cycler>=0.11.0",
    "fonttools>=4.40.0",
    "kiwisolver>=1.4.0",
    "matplotlib-inline>=0.1.6",
    "pyparsing>=3.0.0",

    # Git integration
    "GitPython>=3.1.40",
    "gitdb>=4.0.10",
    "smmap>=5.0.0",

    # Additional utilities
    "narwhals>=0.10.0",
    "paginate>=0.5.0",
    "pycparser>=2.21",
    "Pygments>=2.15.0",
    "pytokens>=0.3.0",
    "regex>=2023.0.0",
    "shellingham>=1.5.0",
    "typing-inspection>=0.4.0",
    "typing_extensions>=4.7.0",
    "wcwidth>=0.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "pytest-timeout>=2.1.0",

    # Code formatting and linting
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.12.0",
    "pycodestyle>=2.11.0",
    "pyflakes>=3.1.0",
    "mccabe>=0.7.0",

    # Type checking
    "mypy>=1.5.0",
    "mypy-extensions>=1.0.0",

    # Development tools
    "ipython>=8.12.0",
    "ipykernel>=6.25.0",
    "jupyter_client>=8.3.0",
    "jupyter_core>=5.3.0",
    "debugpy>=1.6.0",

    # IPython utilities
    "appnope>=0.1.3",
    "asttokens>=2.2.0",
    "comm>=0.1.0",
    "decorator>=5.1.0",
    "executing>=1.2.0",
    "jedi>=0.19.0",
    "nest-asyncio>=1.5.0",
    "parso>=0.8.0",
    "pexpect>=4.8.0",
    "platformdirs>=3.0.0",
    "prompt_toolkit>=3.0.0",
    "psutil>=5.9.0",
    "ptyprocess>=0.7.0",
    "pure_eval>=0.2.0",
    "pyzmq>=25.0.0",
    "stack-data>=0.6.0",
    "tornado>=6.3.0",
    "traitlets>=5.9.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-material-extensions>=1.2.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "annotated-doc>=0.0.4",
    "ipython_pygments_lexers>=1.0.0",

    # Documentation dependencies
    "babel>=2.12.0",
    "ghp-import>=2.1.0",
    "griffe>=0.35.0",
    "Markdown>=3.4.0",
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.0",
    "mergedeep>=1.3.0",
    "pathspec>=0.11.0",
    "pymdown-extensions>=10.0.0",
    "pyyaml_env_tag>=0.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ames_house_price_prediction"]
force_sort_within_sections = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=ames_house_price_prediction.core",
    "--cov=ames_house_price_prediction.config",
    "--cov=ames_house_price_prediction.validation",
    "--cov=api",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multiple components)",
    "e2e: End-to-end tests (slow, full pipeline)",
    "slow: Tests that take significant time",
    "api: API endpoint tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sklearn.exceptions.InconsistentVersionWarning",
]
